# raspi-libcamera-embassy-examples

./: LICENSE  README.md  rust-toolchain.toml  shell.nix
rerun-example/: Cargo.toml  justfile
rerun-example/src/: main.rs
std-example/: .gitignore  Cargo.toml  justfile
std-example/src/: main.rs
yolov8-example/: .gitignore  Cargo.toml  README.md  justfile
yolov8-example/.cargo/: config.toml
yolov8-example/src/: main.rs  model.rs
